gap fixed

--- a/src/styles/scss/partials/_post.scss
+++ b/src/styles/scss/partials/_post.scss
@@ -5,6 +5,7 @@
    overflow-y: auto;
 
   img {
+    display: block;
     width: 100%;
   }
 
